# deploy_crewai_agent_online_class15

./: README.md  pyproject.toml
src/deploy_crewai_agent_onclass15/: main.py
src/deploy_crewai_agent_online_class15/: crew.py  main.py
