[project]
name = "deploy_crewai_agent_onclass15"
version = "0.1.0"
description = "deploy_crewai_agent_onclass15 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.0,<1.0.0",
    "docling>=2.15.1",
]

[project.scripts]
deploy_crewai_agent_onclass15 = "deploy_crewai_agent_onclass15.main:run"
run_crew = "deploy_crewai_agent_onclass15.main:main"
docling = "deploy_crewai_agent_onclass15.main:main"



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
